--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,7 @@
 .search-input {
     display: flex;
     gap: 5px; 
+    align-items: center;
 
 }
 .search-bar {
@@ -54,4 +55,50 @@
 
 .result-info a {
     word-break: break-all; 
+}
+
+.dropbtn {
+    background-color: rgb(77, 31, 131);
+    color: white;
+    padding: 12px;
+    font-size: 16px;
+    border: outset;
+    border-color: black;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: beige;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    font-size: 16px;
+}
+
+.dropdown-content button {
+    background: none; 
+    border: none; 
+    color: black; 
+    padding: 12px 16px; 
+    text-align: left; 
+    cursor: pointer; 
+    width: 100%;
+}
+
+.dropdown-content button:hover {
+    background-color: #ddd; 
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3648ac;
 }
