--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App-header {
+.App-header-dark {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -7,6 +7,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header-light {
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
 }
 
 
