--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,8 +10,8 @@ p {
     display: flex;
     gap: 5px; 
     align-items: center;
-
 }
+
 .search-bar {
     width: 400px;
     height: 40px; 
@@ -40,13 +40,15 @@ p {
 
 .container {
     color: black;
-    max-width: 560px; 
-    margin: 20px auto;   
-    padding: 25px;    
-    text-align: left;  
+    max-width: 650px;
+    margin: 20px auto;
+    padding: 25px;
+    text-align: left;
     border: 3px solid black;
     background-color: gainsboro;
-    border-radius: 30px; 
+    border-radius: 30px;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 .result-name {
@@ -56,6 +58,7 @@ p {
 
 .result-info {
     font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 5px;
     margin-left: 40px;
     margin-right: 40px;
@@ -65,6 +68,15 @@ p {
     word-break: break-all; 
 }
 
+.results-container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(550px, 1fr));
+    gap: 30px;
+    padding: 20px;
+    margin: 0 auto;
+    justify-content: center;
+    box-sizing: border-box;
+}
 .dropbtn {
     background-color: rgb(210, 48, 99);
     color: white;
@@ -109,4 +121,11 @@ p {
 
 .dropdown:hover .dropbtn {
     background-color: #3648ac;
+}
+
+/* For small screens */
+@media (max-width: 768px) {
+    .results-container {
+        grid-template-columns: 1fr;
+    }
 }
